fix: 애플 터치아이콘, 메모 모달 UI변경, dropdown 가려지는 이슈 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,9 @@ body {
   color: var(--foreground);
   font-family: system-ui, -apple-system, sans-serif;
 }
+button {
+  cursor: pointer;
+}
 
 /* 스크롤바 스타일 */
 ::-webkit-scrollbar {
